--- a/app/src/main/res/layout/activity_clicky_clicky.xml
+++ b/app/src/main/res/layout/activity_clicky_clicky.xml
@@ -9,74 +9,72 @@
 
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/buttonA"
         android:layout_height="75dp"
         android:layout_width="75dp"
         app:layout_constraintDimensionRatio="H,1:1"
         android:text="A"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/button2"
+        app:layout_constraintRight_toLeftOf="@+id/buttonB"
         tools:ignore="MissingConstraints"/>
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/buttonB"
         android:layout_height="75dp"
         android:layout_width="75dp"
         android:text="B"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/button"
+        app:layout_constraintLeft_toRightOf="@+id/buttonA"
         tools:ignore="MissingConstraints"/>
 
     <Button
-        android:id="@+id/buttonN1"
+        android:id="@+id/buttonC"
         android:layout_height="75dp"
         android:layout_width="75dp"
         android:text="C"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/button2"
+        app:layout_constraintLeft_toRightOf="@+id/buttonB"
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/button3"
-        app:layout_constraintTop_toBottomOf="@id/button"
+        android:id="@+id/buttonD"
+        app:layout_constraintTop_toBottomOf="@id/buttonA"
         android:layout_height="75dp"
         android:layout_width="75dp"
         android:text="D"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/button2" />
+        app:layout_constraintRight_toLeftOf="@+id/buttonB" />
 
     <Button
-        android:id="@+id/button4"
-        app:layout_constraintTop_toBottomOf="@id/button2"
-        android:layout_height="75dp"
-        android:layout_width="75dp"
-        android:text="D"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/button" />
-
-    <Button
-        android:id="@+id/buttonN2"
-        app:layout_constraintTop_toBottomOf="@id/buttonN1"
+        android:id="@+id/buttonE"
+        app:layout_constraintTop_toBottomOf="@id/buttonB"
         android:layout_height="75dp"
         android:layout_width="75dp"
         android:text="E"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/button4" />
+        app:layout_constraintLeft_toRightOf="@+id/buttonA" />
+
+    <Button
+        android:id="@+id/buttonF"
+        app:layout_constraintTop_toBottomOf="@id/buttonC"
+        android:layout_height="75dp"
+        android:layout_width="75dp"
+        android:text="F"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/buttonE" />
 
     <TextView
         android:id="@+id/textview_second"
-        app:layout_constraintTop_toBottomOf="@id/button3"
+        app:layout_constraintTop_toBottomOf="@id/buttonE"
         android:layout_height="75dp"
         android:layout_width="75dp"
-        android:text="Pressed Button : - "
         app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/button4" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 
