--- a/app/src/main/res/layout/activity_clicky_clicky.xml
+++ b/app/src/main/res/layout/activity_clicky_clicky.xml
@@ -7,75 +7,62 @@
     tools:context=".ClickyClickyActivity">
 
 
-
     <Button
         android:id="@+id/buttonA"
-        android:layout_height="75dp"
         android:layout_width="75dp"
-        app:layout_constraintDimensionRatio="H,1:1"
+        android:layout_height="75dp"
         android:text="A"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/buttonB"
-        tools:ignore="MissingConstraints"/>
-
-    <Button
-        android:id="@+id/buttonB"
-        android:layout_height="75dp"
-        android:layout_width="75dp"
-        android:text="B"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/buttonA"
-        tools:ignore="MissingConstraints"/>
-
-    <Button
-        android:id="@+id/buttonC"
-        android:layout_height="75dp"
-        android:layout_width="75dp"
-        android:text="C"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/buttonB"
+        app:layout_constraintEnd_toStartOf="@+id/buttonB"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/buttonD"
-        app:layout_constraintTop_toBottomOf="@id/buttonA"
-        android:layout_height="75dp"
+        android:id="@+id/buttonB"
         android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:text="B"
+        app:layout_constraintEnd_toStartOf="@+id/buttonC"
+        tools:ignore="MissingConstraints" />
+
+    <Button
+        android:id="@+id/buttonC"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:text="C"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="330dp" />
+
+    <Button
+        android:id="@+id/buttonD"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:text="D"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/buttonB" />
+        app:layout_constraintEnd_toStartOf="@+id/buttonE"
+        app:layout_constraintTop_toBottomOf="@+id/buttonA" />
 
     <Button
         android:id="@+id/buttonE"
-        app:layout_constraintTop_toBottomOf="@id/buttonB"
-        android:layout_height="75dp"
         android:layout_width="75dp"
+        android:layout_height="75dp"
         android:text="E"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/buttonA" />
+        app:layout_constraintEnd_toStartOf="@+id/buttonF"
+        app:layout_constraintTop_toBottomOf="@+id/buttonB" />
 
     <Button
         android:id="@+id/buttonF"
-        app:layout_constraintTop_toBottomOf="@id/buttonC"
-        android:layout_height="75dp"
         android:layout_width="75dp"
+        android:layout_height="75dp"
         android:text="F"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/buttonE" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonC"
+        tools:layout_editor_absoluteX="330dp" />
 
     <TextView
         android:id="@+id/textview_second"
-        app:layout_constraintTop_toBottomOf="@id/buttonE"
-        android:layout_height="75dp"
         android:layout_width="75dp"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintRight_toRightOf="parent" />
-
+        android:layout_height="75dp"
+        android:layout_marginTop="56dp"
+        app:layout_constraintTop_toBottomOf="@+id/buttonE"
+        tools:layout_editor_absoluteX="255dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
