--- a/app/src/main/res/layout/activity_clicky_clicky.xml
+++ b/app/src/main/res/layout/activity_clicky_clicky.xml
@@ -70,9 +70,10 @@
 
     <TextView
         android:id="@+id/textview_second"
-        android:layout_width="75dp"
+        android:layout_width="wrap_content"
         android:layout_height="75dp"
         android:layout_marginTop="56dp"
+        android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
