--- a/app/src/main/res/layout/url_adder_dialog_box.xml
+++ b/app/src/main/res/layout/url_adder_dialog_box.xml
@@ -7,10 +7,11 @@
 
     <EditText
         android:id="@+id/url_edit_text"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
+        android:hint="Enter the URL here (https://www.example.com)"
         app:layout_constraintBottom_toTopOf="@+id/dialog_submit_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
