--- a/app/src/main/res/layout/url_adder_dialog_box.xml
+++ b/app/src/main/res/layout/url_adder_dialog_box.xml
@@ -6,12 +6,25 @@
     android:layout_height="wrap_content">
 
     <EditText
-        android:id="@+id/url_edit_text"
-        android:layout_width="match_parent"
+        android:id="@+id/url_name_edit_text"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Enter the URL here (https://www.example.com)"
+        android:hint="Name"
+        app:layout_constraintBottom_toTopOf="@+id/url_edit_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/url_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="URL"
         app:layout_constraintBottom_toTopOf="@+id/dialog_submit_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
