Added a new button and activity for thr Find Primes

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -6,47 +6,49 @@
     android:layout_height="match_parent"
     tools:context=".FirstFragment">
 
-    <TextView
-        android:id="@+id/textview_first"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world"
-        app:layout_constraintBottom_toTopOf="@id/button_about"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/button_about"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/about"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textview_first" />
+        app:layout_constraintBottom_toTopOf="@+id/button_clicky"
+        app:layout_constraintTop_toBottomOf="@+id/textview_first"
+        tools:layout_editor_absoluteX="149dp" />
 
-    <Button
-        android:id="@+id/button_clicky"
+    <TextView
+        android:id="@+id/textview_first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/clicky"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_about"
-        app:layout_constraintVertical_bias="0.156" />
+        android:text="@string/hello_world"
+        app:layout_constraintBottom_toTopOf="@+id/button_about"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="168dp" />
 
     <Button
         android:id="@+id/button_link_collector"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/link_collector"
+        app:layout_constraintBottom_toTopOf="@+id/find_prim_button"
+        app:layout_constraintTop_toBottomOf="@+id/button_clicky"
+        tools:layout_editor_absoluteX="125dp" />
+
+    <Button
+        android:id="@+id/button_clicky"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/clicky"
+        app:layout_constraintBottom_toTopOf="@+id/button_link_collector"
+        app:layout_constraintTop_toBottomOf="@+id/button_about"
+        tools:layout_editor_absoluteX="132dp" />
+
+    <Button
+        android:id="@+id/find_prim_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Find Primes"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_clicky"
-        app:layout_constraintVertical_bias="0.156" />
+        app:layout_constraintTop_toBottomOf="@+id/button_link_collector"
+        tools:layout_editor_absoluteX="140dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
