--- a/app/src/main/res/layout/activity_find_prime.xml
+++ b/app/src/main/res/layout/activity_find_prime.xml
@@ -25,15 +25,18 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:layout_toStartOf="@id/current_num_text"
-            tools:text="Current Number" />
+            android:text="Current Number" />
 
         <TextView
             android:id="@+id/current_num_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_margin="16dp"
-            android:text="Num" />
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="0" />
 
     </RelativeLayout>
 
@@ -50,17 +53,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_margin="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:layout_toStartOf="@id/latest_prime_text"
-            tools:text="Latest Prime" />
+            android:text="Latest Prime" />
 
         <TextView
             android:id="@+id/latest_prime_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_margin="16dp"
-            android:text="Prime" />
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:text="0" />
 
     </RelativeLayout>
 
