--- a/app/src/main/res/layout/activity_find_prime.xml
+++ b/app/src/main/res/layout/activity_find_prime.xml
@@ -77,7 +77,7 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="CheckBox"
+        android:text="Pacifier Switch"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +87,7 @@
         android:id="@+id/start_search_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start Search"
+        android:text="Find Primes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
