Adding code to ask for permission to get the location

--- a/app/src/main/res/layout/activity_location_sensing.xml
+++ b/app/src/main/res/layout/activity_location_sensing.xml
@@ -138,6 +138,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.13"
             android:checked="false"
+            android:minHeight="48dp"
             android:text="Coarse Accuracy"
             android:textSize="25dp" />
     </RadioGroup>
