--- a/app/src/main/res/layout/api_search_output_layout.xml
+++ b/app/src/main/res/layout/api_search_output_layout.xml
@@ -1,49 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/card_view_container"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="4dp"
-    android:background="?attr/selectableItemBackground"
-    android:clickable="true"
-    android:elevation="16dp">
+    android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/anime_card_view_recycler_image_view"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
+        android:id="@+id/anime_card_view_recycler_text_view_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?attr/selectableItemBackground">
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/anime_card_view_recycler_image_view"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:src="@mipmap/ic_launcher" />
-
-        <LinearLayout
-            android:id="@+id/anime_card_view_recycler_text_view_linear_layout"
+        <TextView
+            android:id="@+id/anime_card_view_recycler_text_view_title"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="?attr/selectableItemBackground"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:text="Title"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/anime_card_view_recycler_text_view_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Title"
-                android:textColor="@android:color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/anime_card_view_recycler_type_text_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Type"
-                android:textColor="@android:color/darker_gray" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/anime_card_view_recycler_type_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Type"
+            android:textColor="@android:color/darker_gray" />
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
