--- a/app/src/main/res/layout/activity_api_search.xml
+++ b/app/src/main/res/layout/activity_api_search.xml
@@ -8,8 +8,14 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/api_seaerch_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/anime_search_button" />
+
     <Button
         android:id="@+id/anime_search_button"
         android:layout_width="wrap_content"
@@ -17,6 +23,7 @@
         android:text="Search"
         app:layout_constraintBottom_toTopOf="@+id/api_seaerch_recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
