Updating the UI and integrating the UI with the API search

--- a/app/src/main/res/layout/api_search_output_layout.xml
+++ b/app/src/main/res/layout/api_search_output_layout.xml
@@ -23,7 +23,7 @@
             android:layout_height="wrap_content"
             android:text="Title"
             android:textColor="@android:color/black"
-            android:textSize="18sp"
+            android:textSize="16dp"
             android:textStyle="bold" />
 
         <TextView
@@ -31,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Type"
+            android:textSize="12dp"
             android:textColor="@android:color/darker_gray" />
 
     </LinearLayout>
