--- a/app/src/main/res/layout/activity_api_search.xml
+++ b/app/src/main/res/layout/activity_api_search.xml
@@ -20,8 +20,35 @@
             android:layout_height="42dp"
             android:layout_marginTop="52dp"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Name" />
+            android:hint="Name of Show or Movie"
+            android:inputType="textPersonName" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Airing Status" />
+
+            <CheckBox
+                android:id="@+id/airing_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Airing" />
+
+            <CheckBox
+                android:id="@+id/finished_checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="CheckBox" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -34,6 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
                 android:text="Type"
                 android:textSize="18sp" />
 
@@ -42,6 +70,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
                 android:orientation="horizontal">
 
                 <RadioButton
