Finalizing the UI and solving bugs

--- a/app/src/main/res/layout/api_search_output_layout.xml
+++ b/app/src/main/res/layout/api_search_output_layout.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:andoird="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent"
+    android:layout_margin="16dp">
+
 
     <ImageView
         android:id="@+id/anime_card_view_recycler_image_view"
@@ -31,9 +33,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Type"
-            android:textSize="12dp"
-            android:textColor="@android:color/darker_gray" />
+            android:textColor="@android:color/darker_gray"
+            android:textSize="12dp" />
 
     </LinearLayout>
+
 
 </LinearLayout>
