--- a/app/src/main/res/layout/activity_api_search.xml
+++ b/app/src/main/res/layout/activity_api_search.xml
@@ -33,7 +33,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Airing Status" />
+                android:text="Airing Status"
+                android:textSize="18sp"/>
 
             <CheckBox
                 android:id="@+id/airing_checkbox"
@@ -47,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="CheckBox" />
+                android:text="Finished" />
         </LinearLayout>
 
         <LinearLayout
@@ -110,9 +111,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/api_seaerch_recycler_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        tools:layout_editor_absoluteX="181dp" />
+        tools:layout_editor_absoluteX="185dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
